--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -26,8 +26,8 @@
             </tr>
             <tr th:each="order: ${orders}">
                 <td th:text="${order.id}">id</td>
-                <td th:text="${order.getProductName()}">info</td>
-                <td th:text="${order.user.username}">order</td>
+                <td th:text="${order.getProductName()}" >info</td>
+                <td ><a th:text="${order.user.username}" th:href="@{'/user/'+${order.user.username}}">order</a></td>
                 <td><a th:href="@{'/order/'+${order.id}}"><img th:width="25px" th:src="(${order.status} == 1) ? 'https://img.icons8.com/cotton/64/000000/checkmark.png' : 'https://img.icons8.com/dotty/80/000000/ok.png'"></a></td>
                 <td><a th:href="@{'/order/delete/'+${order.id}}"><img th:width="25px" src="https://img.icons8.com/ios/50/000000/trash-filled.png"></a></td>
             </tr>
