--- a/src/main/resources/templates/snippets/header.html
+++ b/src/main/resources/templates/snippets/header.html
@@ -19,8 +19,8 @@
 
     <div th:fragment="links">
         <link rel="stylesheet" th:href="@{/css/main.css}"/>
-        <link rel="stylesheet" th:href="@{classpath:static/css/header.css}"/>
-        <link rel="stylesheet" th:href="@{classpath:static/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/css/header.css}"/>
+        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     </div>
 </body>
