--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -35,7 +35,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user : ${users}">
+            <tr th:each="user : ${user}">
                 <td th:text="${user.username}"></td>
                 <td th:text="${user.firstName}"></td>
                 <td th:text="${user.secondName}"></td>
