refactor - fix the css active link issue

--- a/src/main/resources/templates/snippets/header.html
+++ b/src/main/resources/templates/snippets/header.html
@@ -12,6 +12,7 @@
                 <a id="ul-drinks" href="/drink/">Drinks</a>
                 <a id="ul-orders" href="/order/">Orders</a>
                 <a id="ul-users" th:href="@{'/user/'+${#authentication.getPrincipal().getUsername()}}" ><span th:text="${#authentication.getPrincipal().getUsername()}"></span></a>
+                <a id="ul-allusers" th:href="@{'/user/'}" >Users</a>
                 <a href="/logout">logout</a>
             </div>
         </div>
