--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -17,7 +17,7 @@
     border-radius: 4px;
 }
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+/* Style the logo link  */
 .header a.logo {
     font-size: 25px;
     font-weight: bold;
@@ -28,6 +28,7 @@
     background-color: #ddd;
     color: black;
 }
+
 
 /* Style the active/current link*/
 .header a.active {
