--- a/src/main/resources/templates/snippets/css/header.css
+++ b/src/main/resources/templates/snippets/css/header.css
@@ -40,7 +40,7 @@
     float: right;
 }
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+/* Add media queries for responsiveness */
 @media screen and (max-width: 500px) {
     .header a {
         float: none;
