--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -17,8 +17,8 @@
 
     <header th:insert="snippets/header.html :: header"></header>
     <script>
-        $('#ul-users').addClass("active")
-    </script>
+        // language=JQuery-CSS
+      $('#ul-allusers').addClass("active")</script>
 
     <div class="col-md-8" style="margin-top: 30px;">
         <table class="custom-table">
@@ -35,7 +35,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user : ${user}">
+            <tr th:each="user : ${users}">
                 <td th:text="${user.username}"></td>
                 <td th:text="${user.firstName}"></td>
                 <td th:text="${user.secondName}"></td>
@@ -47,32 +47,6 @@
             </tr>
             </tbody>
         </table>
-    </div>
-    <div class="col-md-3" style="margin-top: 50px; float: right;">
-        <form th:object="${user}" th:action="@{/user/}" method="post">
-
-            <input type="hidden" th:field="*{username}" id="username" placeholder="username">
-
-            <label for="firstName">First Name</label>
-            <input type="text" th:field="*{firstName}" id="firstName" placeholder="firstName">
-            <span th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></span>
-            <br>
-            <label for="secondName">Second Name</label>
-            <input type="text" th:field="*{secondName}" id="secondName" placeholder="secondName">
-            <br>
-            <label for="phoneNumber">Phone Number</label>
-            <input type="text" th:field="*{phoneNumber}" id="phoneNumber" placeholder="phoneNumber">
-            <br>
-            <label for="address">Address</label>
-            <input type="text" th:field="*{address}" id="address" placeholder="address">
-            <br>
-            <label for="email">E-mail</label>
-            <input type="text" th:field="*{email}" id="email" placeholder="email">
-            <br>
-
-            <input type="submit" value="Update Info">
-
-        </form>
     </div>
 
 </main>
