--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -43,7 +43,7 @@
                 <td th:text="${user.address}"></td>
                 <td th:text="${user.email}"></td>
                 <td><a th:href="@{{username}(username=${user.username})}"><img th:width="25px" src="https://img.icons8.com/metro/26/000000/pencil.png"></a></td>
-                <td><a th:href="@{delete/{username}(username=${user.username})}"><img th:width="25px" src="https://img.icons8.com/ios/50/000000/trash-filled.png"></a></td>
+                <td><a th:href="@{/delete/{username}(username=${user.username})}"><img th:width="25px" src="https://img.icons8.com/ios/50/000000/trash-filled.png"></a></td>
             </tr>
             </tbody>
         </table>
