--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,9 +31,9 @@
                 <td th:text="${pizza.info}">info</td>
                 <td th:text="${pizza.size}">size</td>
                 <td th:text="${pizza.price}">price</td>
-                <td><a th:href="@{'/pizzas/' + ${pizza.id}}"><img th:width="25px" src="https://img.icons8.com/metro/26/000000/pencil.png"></a> </td>
-                <td><a th:href="@{'/pizzas/delete/' + ${pizza.id}}"><img th:width="25px" src="https://img.icons8.com/ios/50/000000/trash-filled.png"></a> </td>
-                <td><a th:href="@{/orders/create?type=pizza&productId={id}(id=${pizza.id})}"><img th:width="25px" src="https://img.icons8.com/dotty/80/000000/add-shopping-cart.png"></a></td>
+                <td><a th:href="@{'/pizzas/' + ${pizza.id}}"><img th:width="25px" th:src="@{/images/pencil.png}"></a> </td>
+                <td><a th:href="@{'/pizzas/delete/' + ${pizza.id}}"><img th:width="25px" th:src="@{/images/trash-filled.png}"></a> </td>
+                <td><a th:href="@{/orders/create?type=pizza&productId={id}(id=${pizza.id})}"><img th:width="25px" th:src="@{/images/add-shopping-cart.png}"></a></td>
             </tr>
         </table>
     </div>
