--- a/src/main/resources/templates/snippets/header.html
+++ b/src/main/resources/templates/snippets/header.html
@@ -6,7 +6,7 @@
 <body>
     <div th:fragment="header">
         <div class="header">
-            <a href="/pizza/" class="logo">TasteJoy</a>
+            <a href="/pizzas" class="logo">TasteJoy</a>
             <div class="header-right">
                 <a id="ul-pizza"  href="/pizzas">Pizza</a>
                 <a id="ul-drinks" href="/drinks">Drinks</a>
