change the order html

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Spring Boot Thymeleaf Hello World Example</title>
-    <link th:insert="snippets/header.html :: links"></linkth:insert>
+    <link th:insert="snippets/header.html :: links"></link>
 
 </head>
 <body>
