--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -49,7 +49,7 @@
         </table>
     </div>
     <div class="col-md-3" style="margin-top: 50px; float: right;">
-        <form th:object="${user}" th:action="@{/users}" method="post">
+        <form th:object="${user}" th:action="@{/users/}" method="post">
 
             <input type="hidden" th:field="*{username}" id="username" placeholder="username">
 
